fix safari horizontal overflow on reviews section

--- a/app/(pages)/(home)/home.module.scss
+++ b/app/(pages)/(home)/home.module.scss
@@ -133,12 +133,23 @@
   color: var(--black);
 }
 
+// .welcome-image {
+//   flex: 1;
+//   min-width: 0;
+//   display: flex;
+//   justify-content: center;
+//   align-items: flex-start;
+// }
+
 .welcome-image {
-  flex: 1;
-  min-width: 0;
+  order: -1;
+  width: min(370px, calc(100vw - 32px));
+  height: 240px;
+  overflow: hidden; // add this
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .welcome-image-desktop {
@@ -152,7 +163,14 @@
 }
 
 .welcome-image-mobile-grid {
-  display: none;
+  display: -webkit-grid; // Safari fallback
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0;
+  width: 100%;
+  height: 240px; // explicitly match the .welcome-image height
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .learn-more-button {
@@ -312,6 +330,7 @@
   margin-top: 100px;
   gap: 32px;
   margin-bottom: 100px;
+  width: 100%;
 }
 
 .reviews {
@@ -592,6 +611,7 @@
   .review-container {
     margin-top: 64px;
     margin-bottom: 64px;
+    overflow-x: clip;
   }
 
   .reviews {
@@ -606,7 +626,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 16px;
-    overflow-x: auto;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scroll-padding-left: 16px;
     scroll-padding-right: 16px;
